Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90517

[REG 5.15.2 -> 5.15.3] QWebEnginePage::loadFinished signal is not emitted if the page is loaded but the server sends 404 http status code

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.15.4
    • 5.15.3
    • WebEngine
    • None
    • All
    • c43c3c3ae46735e3d23e0ed70c31143d2556a579 (qt/qtwebengine/5.15)

    Description

      I can reproduce this issue with widget when error page is enabled. It is reproducible with the following links:

      If the navigation results 400 or greater http status code, WebEngine considers it is a load failure. If load failure happens, the widget API emits the loadFinished signal when the load of the error page is finished.

      The problem is that the loading of an error page doesn't depend on the http status code thus error page should not be expected on an http error. The server may send the page with an http error code and Chromium successfully loads the page. This case, error page is not loaded and loadFinished signal is not emitted.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes