Fix loadFinished signal if page has content but server sends HTTP error

For triggering an error page 3 conditions should be fulfilled:
  - main frame navigation
  - the page's document is empty
  - the HTTP status code indicates an error

This fix adds check for the empty document and sends loadFinished signal
without expecting an error page if the document is not empty.

Fixes: QTBUG-90517
Change-Id: I6463d75fb5e682932feca64b0f059f9aa475795c
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>