src/webengine/api/qquickwebengineview_p_p.h
@@ -116,7 +116,8 @@ public:
     void loadStarted(const QUrl &provisionalUrl, bool isErrorPage = false) override;
     void loadCommitted() override;
     void loadVisuallyCommitted() override;
-    void loadFinished(bool success, const QUrl &url, bool isErrorPage = false, int errorCode = 0, const QString &errorDescription = QString()) override;
+    void loadFinished(bool success, const QUrl &url, bool isErrorPage, int errorCode,
+                      const QString &errorDescription, bool triggersErrorPage) override;
     void focusContainer() override;
     void unhandledKeyEvent(QKeyEvent *event) override;
     QSharedPointer<QtWebEngineCore::WebContentsAdapter>
